force-app/main/default/objects/Account/fields/Account_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Activated_Date__c</fullName>
    <description>This field will store the date when the account is activated</description>
    <label>Account Activated Date</label>
    <type>Date</type>
</CustomField>