force-app/main/default/objects/Account/fields/Account_Active_Period__c.field-meta.xml
<CustomField>
    <fullName>Account_Active_Period__c</fullName>
    <description>This field will show the time period for which account is active</description>
    <formula>IF(ISBLANK( Account_Activated_Date__c  ), 0, TODAY() -  Account_Activated_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Active Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>