force-app/main/default/objects/Account/fields/Account_Director__c.field-meta.xml
<CustomField>
    <fullName>Account_Director__c</fullName>
    <formula>Owner.Manager.FirstName + &apos; &apos; + Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Director</label>
    <type>Text</type>
</CustomField>