force-app/main/default/objects/Account/fields/Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_External_Id__c</fullName>
    <description>This field will store the account&apos;s external Id</description>
    <externalId>true</externalId>
    <label>Account External Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>