force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>This field will generate auto numbers for every account</description>
    <displayFormat>AC-{000000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>