force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>This field will store the status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Dunned 1-way</fullName>
            </value>
            <value>
                <fullName>Dunned 2-way</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Exempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>