force-app/main/default/objects/Account/fields/Annual_Profit__c.field-meta.xml
<CustomField>
    <fullName>Annual_Profit__c</fullName>
    <description>This field will store the annual profits</description>
    <label>Annual Profit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>