force-app/main/default/objects/Account/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <description>This field is used to capture Account Penetration Index</description>
    <inlineHelpText>Account Penetration Index</inlineHelpText>
    <label>API</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>