force-app/main/default/objects/Account/fields/Available_Technology__c.field-meta.xml
<CustomField>
    <fullName>Available_Technology__c</fullName>
    <description>This field will store the Available technology</description>
    <label>Available Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5G</fullName>
            </value>
            <value>
                <fullName>Fiber Optic Backbone</fullName>
            </value>
            <value>
                <fullName>Fiber Optic Backbone/5G</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>