force-app/main/default/objects/Account/fields/Billing_Address1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address1__c</fullName>
    <label>Billing Address1</label>
    <type>TextArea</type>
</CustomField>