force-app/main/default/objects/Account/fields/Billing_Address2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address2__c</fullName>
    <label>Billing Address 2</label>
    <type>TextArea</type>
</CustomField>