force-app/main/default/objects/Account/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>This field will store the billing type</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>