force-app/main/default/objects/Account/fields/BRN__c.field-meta.xml
<CustomField>
    <fullName>BRN__c</fullName>
    <description>Business Registration Number (e.g. 99999999)</description>
    <inlineHelpText>The BRN consists of 8 numerals (format 99999999). ). The first digit of the
TAN is always 2 or 3.</inlineHelpText>
    <label>BRN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>