force-app/main/default/objects/Account/fields/Budget_and_Funding_Process__c.field-meta.xml
<CustomField>
    <fullName>Budget_and_Funding_Process__c</fullName>
    <description>This field will store the budget and funding process.</description>
    <inlineHelpText>What is their budget and funding process?</inlineHelpText>
    <label>Budget and Funding Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>