force-app/main/default/objects/Account/fields/Building_Address__c.field-meta.xml
<CustomField>
    <fullName>Building_Address__c</fullName>
    <description>This field will store the address of the building</description>
    <label>Building Address</label>
    <type>TextArea</type>
</CustomField>