force-app/main/default/objects/Account/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <description>This field will store the name of the building</description>
    <label>Building Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>