force-app/main/default/objects/Account/fields/Company_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Company_Acronym__c</fullName>
    <description>This field contains the Company Acronym</description>
    <label>Company Acronym</label>
    <length>50</length>
    <type>Text</type>
</CustomField>