force-app/main/default/objects/Account/fields/Construction_Stage__c.field-meta.xml
<CustomField>
    <fullName>Construction_Stage__c</fullName>
    <label>Construction Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Off-Plan</fullName>
            </value>
            <value>
                <fullName>Kick Off</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>