force-app/main/default/objects/Account/fields/Corporate_Number__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Number__c</fullName>
    <description>This field will store the corporate number</description>
    <inlineHelpText>File number in the Business Registration Certificate</inlineHelpText>
    <label>Corporate Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>