force-app/main/default/objects/Account/fields/Current_Goals_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Current_Goals_Objectives__c</fullName>
    <description>This field will store the current goals and objectives</description>
    <inlineHelpText>What are their current goals/objectives?</inlineHelpText>
    <label>Current Goals/Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>