force-app/main/default/objects/Account/fields/Customer_Value_Proposition_Tagline__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value_Proposition_Tagline__c</fullName>
    <description>This field will store the customer value proposition/tagline</description>
    <label>Customer Value Proposition/Tagline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>