force-app/main/default/objects/Account/fields/Date_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment__c</fullName>
    <description>This field will store the date of payment.</description>
    <label>Date of Payment</label>
    <type>Date</type>
</CustomField>