force-app/main/default/objects/Account/fields/Decision_Making_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Process__c</fullName>
    <description>This field will store the decision-making process</description>
    <inlineHelpText>What is their decision-making process?</inlineHelpText>
    <label>Decision Making Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>