force-app/main/default/objects/Account/fields/EMTEL_Revenue__c.field-meta.xml
<CustomField>
    <fullName>EMTEL_Revenue__c</fullName>
    <inlineHelpText>Total emtel revenue (Mobile and Enterprise)</inlineHelpText>
    <label>EMTEL Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>