force-app/main/default/objects/Account/fields/Estimated_Readiness_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Readiness_Date__c</fullName>
    <description>This field will store the estimated readiness date</description>
    <label>Estimated Readiness Date</label>
    <type>Date</type>
</CustomField>