force-app/main/default/objects/Account/fields/External_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Owner__c</fullName>
    <description>This field will store the External Account Owner</description>
    <label>External Account Owner</label>
    <length>60</length>
    <type>Text</type>
</CustomField>