force-app/main/default/objects/Account/fields/Final_Reminder_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Final_Reminder_Sent_On__c</fullName>
    <description>This will store the Final reminder date</description>
    <label>Final Reminder Sent On</label>
    <type>Date</type>
</CustomField>