force-app/main/default/objects/Account/fields/GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinates__c</fullName>
    <description>This field will store the GPS coordinates &quot; Example: -20.228948°, 57.523855°&quot;</description>
    <inlineHelpText>&quot;Coordinates Example: -20.228948°, 57.523855°&quot;</inlineHelpText>
    <label>GPS Coordinates</label>
    <length>30</length>
    <type>Text</type>
</CustomField>