force-app/main/default/objects/Account/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>This field stores the group name</description>
    <label>Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>