force-app/main/default/objects/Account/fields/Growth_Engagement_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Growth_Engagement_Strategy__c</fullName>
    <description>This field will store the growth and engagement strategy</description>
    <inlineHelpText>What is their growth/engagement strategy?</inlineHelpText>
    <label>Growth/Engagement Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>