force-app/main/default/objects/Account/fields/Have_Closed_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Have_Closed_Won_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated when the account has closed won the opportunity.</description>
    <label>Have Closed Won Opportunity</label>
    <type>Checkbox</type>
</CustomField>