force-app/main/default/objects/Account/fields/Impact_on_Business_Industry__c.field-meta.xml
<CustomField>
    <fullName>Impact_on_Business_Industry__c</fullName>
    <description>This field will store what is impacting their business/industry.</description>
    <inlineHelpText>What is impacting their business/industry?</inlineHelpText>
    <label>Impact on Business/Industry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>