force-app/main/default/objects/Account/fields/Isvalidated__c.field-meta.xml
<CustomField>
    <fullName>Isvalidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Isvalidated</label>
    <type>Checkbox</type>
</CustomField>