force-app/main/default/objects/Account/fields/KYC_Completed__c.field-meta.xml
<CustomField>
    <fullName>KYC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is ticked by AM when KYC is completed</description>
    <label>KYC Completed</label>
    <type>Checkbox</type>
</CustomField>