force-app/main/default/objects/Account/fields/Lead_Source_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Additional_Info__c</fullName>
    <description>This field will store additional info related to lead source</description>
    <label>Lead Source Additional Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>