force-app/main/default/objects/Account/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>This field will store the lead source</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Blink</fullName>
            </value>
            <value>
                <fullName>Business Magazine</fullName>
            </value>
            <value>
                <fullName>EDB</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>IT Consultant</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Special Projects</fullName>
            </value>
            <value>
                <fullName>Webinar/Seminar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>