force-app/main/default/objects/Account/fields/LPC_Flag__c.field-meta.xml
<CustomField>
    <fullName>LPC_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will store information about late payment charges</description>
    <inlineHelpText>Late Payment Charges</inlineHelpText>
    <label>LPC Flag</label>
    <type>Checkbox</type>
</CustomField>