force-app/main/default/objects/Account/fields/Main_Business_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Main_Business_Challenges__c</fullName>
    <description>This field will store the main business challenges.</description>
    <inlineHelpText>What are their main business challenges?</inlineHelpText>
    <label>Main Business Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>