force-app/main/default/objects/Account/fields/Main_Business_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Main_Business_Initiatives__c</fullName>
    <description>This field will store the business initiatives</description>
    <inlineHelpText>What are their main business initiatives?</inlineHelpText>
    <label>Main Business Initiatives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>