force-app/main/default/objects/Account/fields/Main_Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Main_Decision_Makers__c</fullName>
    <description>This field will store the main decision-makers.</description>
    <inlineHelpText>Who are the main decision-makers?</inlineHelpText>
    <label>Main Decision Makers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>