force-app/main/default/objects/Account/fields/Market_Share_c__c.field-meta.xml
<CustomField>
    <fullName>Market_Share_c__c</fullName>
    <formula>IF(
    ISBLANK(EMTEL_Revenue__c ) || ISBLANK(Total_Potential_competition_revenue__c ),
    null,
    EMTEL_Revenue__c / (EMTEL_Revenue__c + Total_Potential_competition_revenue__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>