force-app/main/default/objects/Account/fields/Master_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_ID__c</fullName>
    <inlineHelpText>Used to store Account ID from MS Dynamics</inlineHelpText>
    <label>Master Account ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>