force-app/main/default/objects/Account/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <inlineHelpText>Used to capture the operating hours of the account/company</inlineHelpText>
    <label>Operating Hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>