force-app/main/default/objects/Account/fields/Potential_in_this_Account__c.field-meta.xml
<CustomField>
    <fullName>Potential_in_this_Account__c</fullName>
    <description>This field will store the potential in the account.</description>
    <inlineHelpText>What is your potential in this account and why?</inlineHelpText>
    <label>Potential in this Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>