force-app/main/default/objects/Account/fields/PPI__c.field-meta.xml
<CustomField>
    <fullName>PPI__c</fullName>
    <description>This is used to capture Product Penetration Index</description>
    <inlineHelpText>Product Penetration Index</inlineHelpText>
    <label>PPI</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>