force-app/main/default/objects/Account/fields/Promise_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Promise_to_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will store the promise to pay</description>
    <label>Promise to Pay</label>
    <type>Checkbox</type>
</CustomField>