force-app/main/default/objects/Account/fields/Promise_to_Pay_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Promise_to_Pay_Expiry_Date__c</fullName>
    <label>Promise to Pay Expiry Date</label>
    <type>Date</type>
</CustomField>