force-app/main/default/objects/Account/fields/SAM__c.field-meta.xml
<CustomField>
    <fullName>SAM__c</fullName>
    <description>Field to capture the Number of SAM and which product and expected revenue</description>
    <inlineHelpText>Service Attainable Market</inlineHelpText>
    <label>SAM</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>