force-app/main/default/objects/Account/fields/Sectors__c.field-meta.xml
<CustomField>
    <fullName>Sectors__c</fullName>
    <description>This field will store the sector</description>
    <label>Sectors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>BFI</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>PDS/ RES</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>