force-app/main/default/objects/Account/fields/Shareholder_Ownership_Structure__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Ownership_Structure__c</fullName>
    <description>This field will store the Shareholder/ownership structure</description>
    <label>Shareholder/Ownership Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>