force-app/main/default/objects/Account/fields/Shipping_Address1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address1__c</fullName>
    <label>Shipping Address1</label>
    <type>TextArea</type>
</CustomField>