force-app/main/default/objects/Account/fields/Shipping_Address2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address2__c</fullName>
    <label>Shipping Address 2</label>
    <type>TextArea</type>
</CustomField>