force-app/main/default/objects/Account/fields/SOM__c.field-meta.xml
<CustomField>
    <fullName>SOM__c</fullName>
    <description>Total service that can be pitched</description>
    <inlineHelpText>Service Obtainable Market</inlineHelpText>
    <label>SOM</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>