force-app/main/default/objects/Account/fields/Special_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Special_Project_Name__c</fullName>
    <description>Name of the special project</description>
    <label>Special Project Name</label>
    <type>TextArea</type>
</CustomField>