force-app/main/default/objects/Account/fields/Strategy_To_Gain_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Strategy_To_Gain_Market_Share__c</fullName>
    <description>This field will store strategy to gain market share in this account.</description>
    <inlineHelpText>What is your strategy to gain market share in this account?</inlineHelpText>
    <label>Strategy To Gain Market Share</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>