force-app/main/default/objects/Account/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <description>This field will store the sub sector</description>
    <label>Sub Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agro Industry</fullName>
            </value>
            <value>
                <fullName>Audit, Tax &amp; Accounting Firms</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>BPO</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Diplomatic Missions</fullName>
            </value>
            <value>
                <fullName>District Council</fullName>
            </value>
            <value>
                <fullName>Entertainment &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverages</fullName>
            </value>
            <value>
                <fullName>Freight &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>GBL Companies</fullName>
            </value>
            <value>
                <fullName>Global ICT Service Provider</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Jewellery</fullName>
            </value>
            <value>
                <fullName>Light Engineering</fullName>
            </value>
            <value>
                <fullName>Lodging and Accommodation</fullName>
            </value>
            <value>
                <fullName>Management Companies</fullName>
            </value>
            <value>
                <fullName>Ministries</fullName>
            </value>
            <value>
                <fullName>Municipal Council</fullName>
            </value>
            <value>
                <fullName>Parastatal</fullName>
            </value>
            <value>
                <fullName>Property Development</fullName>
            </value>
            <value>
                <fullName>Seafood Processing</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Textiles</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Tourism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>