force-app/main/default/objects/Account/fields/Three_Priorities_To_Increase_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Three_Priorities_To_Increase_Revenue__c</fullName>
    <description>This field will store the 3 priorities to increase revenue</description>
    <inlineHelpText>What are your 3 priorities to increase revenue?</inlineHelpText>
    <label>Three Priorities To Increase Revenue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>