force-app/main/default/objects/Account/fields/Total_Number_Of_Sim_Cards_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Sim_Cards_c__c</fullName>
    <label>Total_Number_Of_Sim_Cards__c</label>
    <summarizedField>Competitor__c.Number_of_Mobile_Connections__c</summarizedField>
    <summaryForeignKey>Competitor__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>