force-app/main/default/objects/Account/fields/Total_Potential_competition_revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Potential_competition_revenue__c</fullName>
    <label>Total Potential competition revenue</label>
    <summarizedField>Competitor__c.Potential_revenue_per_product_Drop_Box__c</summarizedField>
    <summaryForeignKey>Competitor__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>