force-app/main/default/objects/Account/fields/Total_Potential_Mobile_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Potential_Mobile_Revenue__c</fullName>
    <label>Total Potential Mobile Revenue</label>
    <summarizedField>Competitor__c.Potential_revenue_per_product_Drop_Box__c</summarizedField>
    <summaryFilterItems>
        <field>Competitor__c.Potential_Product_from_Competition__c</field>
        <operation>equals</operation>
        <value>Mobile</value>
    </summaryFilterItems>
    <summaryForeignKey>Competitor__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>