force-app/main/default/objects/Account/fields/VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_Number__c</fullName>
    <description>VAT Registration Number (e.g. 99999999)</description>
    <inlineHelpText>MRA allocates a TAN to the entities carrying out business activities</inlineHelpText>
    <label>VAT Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>