force-app/main/default/objects/Account/fields/VAT_Type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Type__c</fullName>
    <description>This field will store the VAT type</description>
    <label>VAT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAT Able</fullName>
            </value>
            <value>
                <fullName>VAT Registered</fullName>
            </value>
            <value>
                <fullName>Zero VAT</fullName>
            </value>
            <value>
                <fullName>VAT Exempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>