force-app/main/default/objects/Account/fields/Year_Started__c.field-meta.xml
<CustomField>
    <fullName>Year_Started__c</fullName>
    <description>This field will store the starting year</description>
    <label>Year Started</label>
    <length>15</length>
    <type>Text</type>
</CustomField>