force-app/main/default/objects/Account/fields/Yearly_Technology_Spend__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Technology_Spend__c</fullName>
    <description>This field will store the yearly technology spend</description>
    <label>Yearly Technology Spend</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>