force-app/main/default/objects/Account/recordTypes/vlocity_cmt__Advertiser.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Advertiser</fullName>
    <active>true</active>
    <description>Use the Advertiser Account to create an Entity which buys Ad-Deals directly from Publisher.</description>
    <label>Advertiser</label>
</RecordType>